deploy: bf4d38d307f86a6d4e144afff8694474dc1a85e5

--- a/rhoso-intro/1/ch1-intro/s3-operations-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s3-operations-lecture.html
@@ -293,7 +293,7 @@ Pending review.
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s3-operations-lecture-fig-1.png" alt="s3 operations lecture fig 1">
+<img src="_images/s3-operations-lecture-fig-1.svg" alt="s3 operations lecture fig 1">
 </div>
 </div>
 <div class="paragraph">
@@ -337,7 +337,7 @@ Pending review.
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s3-operations-lecture-fig-2.png" alt="s3 operations lecture fig 2">
+<img src="_images/s3-operations-lecture-fig-2.svg" alt="s3 operations lecture fig 2">
 </div>
 </div>
 <div class="admonitionblock note">
@@ -368,7 +368,7 @@ The OpenStack cluster diagrams, from now on, will ommit the OpenShift cluster no
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s3-operations-lecture-fig-3.png" alt="s3 operations lecture fig 3">
+<img src="_images/s3-operations-lecture-fig-3.svg" alt="s3 operations lecture fig 3">
 </div>
 </div>
 <div class="paragraph">
@@ -415,7 +415,7 @@ In OpenShift, the term "operator" sometimes refers to a software component, inst
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s3-operations-lecture-fig-4.png" alt="s3 operations lecture fig 4">
+<img src="_images/s3-operations-lecture-fig-4.svg" alt="s3 operations lecture fig 4">
 </div>
 </div>
 <div class="paragraph">
