--- a/rhoso-intro/1/ch2-services/s1-fundamental-lecture.html
+++ b/rhoso-intro/1/ch2-services/s1-fundamental-lecture.html
@@ -278,7 +278,7 @@ Pending Review
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s1-fundamental-lecture-fig1.png" alt="s1 fundamental lecture fig1">
+<img src="_images/s1-fundamental-lecture-fig-1.svg" alt="s1 fundamental lecture fig 1">
 </div>
 </div>
 <div class="paragraph">
@@ -319,7 +319,7 @@ Pending Review
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s1-fundamental-lecture-fig2.png" alt="s1 fundamental lecture fig2">
+<img src="_images/s1-fundamental-lecture-fig-2.svg" alt="s1 fundamental lecture fig 2">
 </div>
 </div>
 <div class="sect2">
