--- a/rhoso-intro/1/ch2-services/s3-additional-lecture.html
+++ b/rhoso-intro/1/ch2-services/s3-additional-lecture.html
@@ -284,7 +284,7 @@ Pending Review
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s3-additional-lecture-fig1.png" alt="s3 additional lecture fig1">
+<img src="_images/s3-additional-lecture-fig-1.svg" alt="s3 additional lecture fig 1">
 </div>
 </div>
 </div>
