--- a/rhoso-intro/1/ch2-services/s5-administration-lecture.html
+++ b/rhoso-intro/1/ch2-services/s5-administration-lecture.html
@@ -297,7 +297,7 @@ Pending Review
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s5-administration-lecture-fig1.png" alt="s5 administration lecture fig1">
+<img src="_images/s5-administration-lecture-fig-1.svg" alt="s5 administration lecture fig 1">
 </div>
 </div>
 </div>
