--- a/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
+++ b/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
@@ -278,7 +278,7 @@ Pending Review.
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s1-domains-projects-lecture-fig1.png" alt="s1 domains projects lecture fig1">
+<img src="_images/s1-domains-projects-lecture-fig-1.svg" alt="s1 domains projects lecture fig 1">
 </div>
 </div>
 <div class="paragraph">
@@ -433,7 +433,7 @@ OpenStack Nova used to provide per-user quotas but they are deprecated and are n
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s1-domains-projects-lecture-fig2.png" alt="s1 domains projects lecture fig2">
+<img src="_images/s1-domains-projects-lecture-fig-2.svg" alt="s1 domains projects lecture fig 2">
 </div>
 </div>
 <div class="paragraph">
