--- a/rhoso-intro/1/ch3-multitenancy/s3-regions-azs-cells-lecture.html
+++ b/rhoso-intro/1/ch3-multitenancy/s3-regions-azs-cells-lecture.html
@@ -281,7 +281,7 @@ Pending Review.
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s3-regions-azs-cells-lecture-fig1.png" alt="s3 regions azs cells lecture fig1">
+<img src="_images/s3-regions-azs-cells-lecture-fig-1.svg" alt="s3 regions azs cells lecture fig 1">
 </div>
 </div>
 <div class="admonitionblock note">
@@ -436,7 +436,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s3-regions-azs-cells-lecture-fig2.png" alt="s3 regions azs cells lecture fig2">
+<img src="_images/s3-regions-azs-cells-lecture-fig-2.svg" alt="s3 regions azs cells lecture fig 2">
 </div>
 </div>
 <div class="paragraph">
@@ -444,7 +444,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s3-regions-azs-cells-lecture-fig3.png" alt="s3 regions azs cells lecture fig3">
+<img src="_images/s3-regions-azs-cells-lecture-fig-3.svg" alt="s3 regions azs cells lecture fig 3">
 </div>
 </div>
 <div class="paragraph">
@@ -452,7 +452,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s3-regions-azs-cells-lecture-fig4.png" alt="s3 regions azs cells lecture fig4">
+<img src="_images/s3-regions-azs-cells-lecture-fig-4.svg" alt="s3 regions azs cells lecture fig 4">
 </div>
 </div>
 <div class="paragraph">
