--- a/rhoso-intro/1/ch1-intro/s1-rhoso-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s1-rhoso-lecture.html
@@ -319,7 +319,7 @@ Pending review.
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s1-rhoso-lecture-fig-1.png" alt="s1 rhoso lecture fig 1">
+<img src="_images/s1-rhoso-lecture-fig-1.svg" alt="s1 rhoso lecture fig 1">
 </div>
 </div>
 <div class="paragraph">
@@ -343,7 +343,7 @@ Pending review.
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s1-rhoso-lecture-fig-2.png" alt="s1 rhoso lecture fig 2">
+<img src="_images/s1-rhoso-lecture-fig-2.svg" alt="s1 rhoso lecture fig 2">
 </div>
 </div>
 <div class="paragraph">
@@ -375,7 +375,7 @@ Pending review.
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s1-rhoso-lecture-fig-3.png" alt="s1 rhoso lecture fig 3">
+<img src="_images/s1-rhoso-lecture-fig-3.svg" alt="s1 rhoso lecture fig 3">
 </div>
 </div>
 <div class="paragraph">
