deploy: 4114c94d8dc0f1e6d312333c6dd05c25fa80c30e

--- a/rhoso-intro/1/ch2-services/s2-fundamental-quiz-answers.html
+++ b/rhoso-intro/1/ch2-services/s2-fundamental-quiz-answers.html
@@ -269,7 +269,7 @@ Pending Review
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Which of the following OpenStack services are required by a standalone application, which you will install inside a VM only because it is incompatible with your personal workstation, and you need for only a short period of time?</p>
+<p>Which of the following OpenStack services are required by a standalone application, which you will install inside a VM only because it is incompatible with your personal workstation, and you need it for only a short period of time?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
