deploy: 0f5bfa0265babcad1030a5dfc859a05a1875968c

--- a/rhoso-intro/1/ch3-multitenancy/s2-multitenancy-quiz.html
+++ b/rhoso-intro/1/ch3-multitenancy/s2-multitenancy-quiz.html
@@ -252,7 +252,7 @@
 <dl>
 <dt class="hdlist1">Objective</dt>
 <dd>
-<p>Assess the learner understanding of OpenStack multi-tenancy mechanisms.</p>
+<p>Assess the learner&#8217;s understanding of OpenStack multi-tenancy mechanisms.</p>
 </dd>
 </dl>
 </div>
@@ -326,7 +326,7 @@ Pending Review.
 </div>
 </li>
 <li>
-<p>An OpenStack Administrator needs to support, on the same cluster, two business units which used to have authonomy on technology decisions and ended up implementing each their own enterprise authentication system. OpenStack Operators from each of those business units need to manage their own applications and use authentication credentials managed by their respective enterprise authentication systems. How can OpenStack support this requirement?</p>
+<p>An OpenStack Administrator needs to support, on the same cluster, two business units which used to have autonomy on technology decisions and ended up implementing each their own enterprise authentication system. OpenStack Operators from each of those business units need to manage their own applications and use authentication credentials managed by their respective enterprise authentication systems. How can OpenStack support this requirement?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
