--- a/rhoso-intro/1/ch3-multitenancy/s4-topology-quiz-answers.html
+++ b/rhoso-intro/1/ch3-multitenancy/s4-topology-quiz-answers.html
@@ -319,7 +319,7 @@ Pending Review.
 </div>
 </li>
 <li>
-<p>An OpenStack Administrator configured an cluster with four kinds of physical machines: machines with GPUs, machines with high CPU core count, machines with both GPUs and high core count, and finaly machines which neither a CPU nor a high core count. What an OpenStack Operator should do to ensure that a workload which requires both GPUs and many CPU cores runs in a physical machine of the matching kind?</p>
+<p>An OpenStack Administrator configured an cluster with four kinds of physical machines: machines with GPUs, machines with high CPU core count, machines with both GPUs and high core count, and finally machines with neither a CPU nor a high core count. What an OpenStack Operator should do to ensure that a workload which requires both GPUs and many CPU cores runs in a physical machine of the matching kind?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
