--- a/rhoso-intro/1/ch3-multitenancy/s4-topology-quiz.html
+++ b/rhoso-intro/1/ch3-multitenancy/s4-topology-quiz.html
@@ -252,7 +252,7 @@
 <dl>
 <dt class="hdlist1">Objective</dt>
 <dd>
-<p>Assess the learner understanding of OpenStack cluster topology mechanisms.</p>
+<p>Assess the learner&#8217;s understanding of OpenStack cluster topology mechanisms.</p>
 </dd>
 </dl>
 </div>
@@ -317,7 +317,7 @@ Pending Review.
 </div>
 </li>
 <li>
-<p>An OpenStack Administrator configured an cluster with four kinds of physical machines: machines with GPUs, machines with high CPU core count, machines with both GPUs and high core count, and finaly machines which neither a CPU nor a high core count. What an OpenStack Operator should do to ensure that a workload which requires both GPUs and many CPU cores runs in a physical machine of the matching kind?</p>
+<p>An OpenStack Administrator configured an cluster with four kinds of physical machines: machines with GPUs, machines with high CPU core count, machines with both GPUs and high core count, and finally machines with neither a CPU nor a high core count. What an OpenStack Operator should do to ensure that a workload which requires both GPUs and many CPU cores runs in a physical machine of the matching kind?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
