--- a/rhoso-intro/1/ch3-multitenancy/s7-summary.html
+++ b/rhoso-intro/1/ch3-multitenancy/s7-summary.html
@@ -257,7 +257,7 @@
 <p>Domains can refer to external identity systems, and users from one domain can access projects from other domains.</p>
 </li>
 <li>
-<p>OpenStack users and grops are assigned roles which grant them permissions to manage API resources in a project.</p>
+<p>OpenStack users and groups are assigned roles which grant them permissions to manage API resources in a project.</p>
 </li>
 <li>
 <p>Projects can also be assigned API resource quotas and compute resource quotas, to prevent workloads from one project from using all capacity of their cluster.</p>
@@ -272,7 +272,7 @@
 <p>OpenStack compute nodes can be members of multiple host aggregates to schedule workloads to physical servers having better performance or cost for each workload.</p>
 </li>
 <li>
-<p>OpenStack compute nodes can also be partitioned on cells, independent of AZs and host aggregates, to manage scalability and resilience of OpenStack services themselves.</p>
+<p>OpenStack compute nodes can also be partitioned in cells, independent of AZs and host aggregates, to manage scalability and resilience of OpenStack services themselves.</p>
 </li>
 </ul>
 </div>
