--- a/rhoso-intro/1/ch3-multitenancy/s3-regions-azs-cells-lecture.html
+++ b/rhoso-intro/1/ch3-multitenancy/s3-regions-azs-cells-lecture.html
@@ -274,10 +274,10 @@ Pending Review.
 <h2 id="_logical_and_physical_organization_of_openstack_clusters"><a class="anchor" href="#_logical_and_physical_organization_of_openstack_clusters"></a>Logical and Physical Organization of OpenStack Clusters</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>In the previous section, we introduced how OpenStack enables users to organize their teams and applications using domains and projects. They provide logical groups that addresses the organizational structure of your teams and applications. At the end of the section, we introduced quotas, which links that logical structure with physical characteristics of your cluster, such as compute capacity.</p>
+<p>In the previous section, we introduced how OpenStack enables users to organize their teams and applications using domains and projects. They provide logical groups that address the organizational structure of your teams and applications. At the end of the section, we introduced quotas, which link that logical structure with physical characteristics of your cluster, such as compute capacity.</p>
 </div>
 <div class="paragraph">
-<p>OpenStack Operators need some understanding of the physcal topology of their OpenStack clusters to ensure their applications run matches their performance and reliability requirements. Sometimes applications need special classes of hardware, such as GPUs; sometimes it is about high-availability, ensuring applications stay operational and their end-users do not notice when a compute server fails.</p>
+<p>OpenStack operators need some understanding of the physical topology of their OpenStack clusters to ensure their applications run in accordance with their performance and reliability requirements. Sometimes applications need special classes of hardware, such as GPUs; sometimes it is about high-availability, ensuring applications stay operational and their end-users do not notice when a compute server fails.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -297,7 +297,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 </table>
 </div>
 <div class="paragraph">
-<p>To address those requirements, OpenStack offer many ways of grouping compute capacity. Most  of them focus on the compute nodes, and some focus on control plane services:</p>
+<p>To address those requirements, OpenStack offer many ways of grouping compute capacity. Most of them focus on the compute nodes, and some focus on control plane services:</p>
 </div>
 <div class="dlist">
 <dl>
@@ -326,7 +326,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 <p>OpenStack Operators are impacted by host aggregates and cells indirectly, from the definition of server flavors which impact the scheduling of server instances on cluster nodes.</p>
 </div>
 <div class="paragraph">
-<p>Regions, AZs, host aggregates, and cells can be used in different ways to structure large privage clouds and the usage patterns vary considerably depending on size and number of data centers and other reasons. OpenStack is not very prescriptive on how and when to use those features, and this course shows examples of typical and recommended approaches.</p>
+<p>Regions, AZs, host aggregates, and cells can be used in different ways to structure large private clouds and the usage patterns vary considerably depending on size and number of data centers and other reasons. OpenStack is not very prescriptive of how and when to use those features, and this course shows examples of typical and recommended approaches.</p>
 </div>
 </div>
 </div>
@@ -342,7 +342,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 <p>A <a href="https://docs.openstack.org/python-openstackclient/latest/cli/command-objects/region.html">Region</a> is just a set of OpenStack API entry points. You could run as many or as few OpenStack services in each regions as you wish, but the common scenario is just running all services in all regions, except for a few shared services.</p>
 </div>
 <div class="paragraph">
-<p>Your region does not need to represent a country nor a large geographical region, like public cloud providers do. It could be a small geographic region like city or even a data center building inside a large campus. It depends on your networking and storage infrastructure, and your need to retain the ability to keep operating a region, as an OpenStacl cluster, independently of other regions, in case of disasters such as earthquakes and floods.</p>
+<p>Your region does not need to represent a country nor a large geographical region, like public cloud providers do. It could be a small geographic region like city or even a data center building inside a large campus. It depends on your networking and storage infrastructure, and your need to retain the ability to keep operating a region, as an OpenStack cluster, independently of other regions, in case of disasters such as earthquakes and floods.</p>
 </div>
 <div class="paragraph">
 <p>It is assumed that OpenStack services in the same region work together, for example Nova can create server instances using volumes from Cinder and networks from Neutron on the same region. But services from different regions would not use each other because of network latency and bandwidth constraints. Other IT infrastructure, such as storage, may not work cross-regions or may work under significant performance and reliability constraints.</p>
@@ -360,7 +360,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 <p><a href="https://docs.openstack.org/nova/latest/admin/availability-zones.html">Availability Zones</a> are partitions of an OpenStack cluster which include a subset of compute nodes from a region. That is, it is a partition of the data plane of an OpenStack cluster. All AZs share the same OpenStack control plane of their regions, and thus the same OpenStack services of their region.</p>
 </div>
 <div class="paragraph">
-<p>Availability Zones typically represent a failure domain of a cluster/region: something like a power supply, horizontal switch fabric, or even the cooling of a datacenter building, whose failufe effectively means the loss or unavailability of all compute nodes in the AZ.</p>
+<p>Availability Zones typically represent a failure domain of a cluster/region: something like a power supply, horizontal switch fabric, or even the cooling of a datacenter building, whose failure effectively means the loss or unavailability of all compute nodes in the AZ.</p>
 </div>
 <div class="paragraph">
 <p>Internally, OpenStack implements AZs as an exposed host aggregate. A compute node can be a member of only one AZ but it can be a member of multiple other, non-exposed host aggregates.</p>
@@ -390,7 +390,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 <p>A <a href="https://docs.openstack.org/nova/latest/admin/aggregates.html">Host Aggregate</a> is a way to group compute nodes based on abitrary attributes, so OpenStack Administrators can create sets of compute nodes based on hardware characteristics and other criteria that impacts the cost and performance of running different classes of workloads on those physical servers.</p>
 </div>
 <div class="paragraph">
-<p>Physical machines are not born equal: some are designed to highly multithreaded applications, while others are designed for I/O intensive applications. Physical machines come not only with different kinds of CPUs, main memory, and caches, but also with different hardware accelerators and possibly multiple I/O buses. Running any application in whatever compute node is available may be inefficient and expensive.</p>
+<p>Physical machines are not born equal: some are designed to highly multi-threaded applications, while others are designed for I/O intensive applications. Physical machines come not only with different kinds of CPUs, main memory, and caches, but also with different hardware accelerators and possibly multiple I/O buses. Running any application in whatever compute node is available may be inefficient and expensive.</p>
 </div>
 <div class="paragraph">
 <p>Most organizations have complex workloads with components that require different classes of physical servers for optimum performance or lower cost. It may be that the simplicity of managing an undifferentiated pool of compute resources is good enough, but it may be that you need to manage a better fit of applications to hardware, and host aggregates enable OpenStack Administrators and Operators to do that.</p>
@@ -429,7 +429,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 <h2 id="_compute_cells"><a class="anchor" href="#_compute_cells"></a>Compute Cells</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>OpenStack cluster Cells are even less visible to OpenStack Operators than Host Aggregates. They relate to the reliability and scalability of an OpenStack control plane itself, instead of to workloads, but compute nodes must belong to one and only one cell, which makes this concept somewhat close to AZs.</p>
+<p>OpenStack cluster cells are even less visible to OpenStack Operators than Host Aggregates. They relate to the reliability and scalability of an OpenStack control plane itself, instead of to workloads, but compute nodes must belong to one and only one cell, which makes this concept somewhat close to AZs.</p>
 </div>
 <div class="paragraph">
 <p>The following figures show three typical ways of configuring cells in an OpenStack cluster: first, configuring an 1:1 equivalence of AZs and cells:</p>
@@ -474,7 +474,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 </dl>
 </div>
 <div class="paragraph">
-<p>OpenStack compute nodes connect to the cell services (the database and message queue) directly, as well as many other componentes of an OpenStack control plane. In this course we do not explode the internal structure of individual OpenStack services, but for now it is sufficient to know that the internal components of each service interact with each user using the cell database and cell message queues.</p>
+<p>OpenStack compute nodes connect to the cell services (the database and message queue) directly, as well as many other components of an OpenStack control plane. In this course we do not explore the internal structure of individual OpenStack services, but for now it is sufficient to know that the internal components of each service interact with each user using the cell database and cell message queues.</p>
 </div>
 <div class="paragraph">
 <p>As you can see, OpenStack enables managing large pools of compute resources, but this requires planning and effort from Administrators.</p>
