--- a/rhoso-intro/1/ch3-multitenancy/s6-review-quiz.html
+++ b/rhoso-intro/1/ch3-multitenancy/s6-review-quiz.html
@@ -252,7 +252,7 @@
 <dl>
 <dt class="hdlist1">Objective</dt>
 <dd>
-<p>Assess the learner understanding of OpenStack multi-tenancy and topology mechanisms.</p>
+<p>Assess the learner&#8217;s understanding of OpenStack multi-tenancy and topology mechanisms.</p>
 </dd>
 </dl>
 </div>
@@ -276,7 +276,7 @@ Pending Review.
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>An OpenStack Administrator needs to support, on the same cluster, two business units which used to be independent companies, before a merger, and must continue using each their legacy enterprise authentication system and each have their own team of OpenStack Operators. How can OpenStack support this requirement?</p>
+<p>An OpenStack Administrator needs to support, on the same cluster, two business units which used to be independent companies, before a merger, and must continue using each of their legacy enterprise authentication system and each have their own team of OpenStack Operators. How can OpenStack support this requirement?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -304,7 +304,7 @@ Pending Review.
 </div>
 </li>
 <li>
-<p>An OpenStack Operator needs to configure a multi-instance workload to be resilient against physical failures of network switches and uninterrupted power supplies (UPS) which are dedicated to a server rack. The data center was designed with multiple server racks, and each rack as its dedicated network switch and UPS devices. Assuming that an Administrator already configured the proper tenancy or topology mechanism, how would the operator configure its workloads?</p>
+<p>An OpenStack Operator needs to configure a multi-instance workload to be resilient against physical failures of network switches and uninterrupted power supplies (UPS) which are dedicated to a server rack. The data center was designed with multiple server racks, and each rack has its dedicated network switch and UPS devices. Assuming that an Administrator already configured the proper tenancy or topology mechanism, how would the operator configure its workloads?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -332,7 +332,7 @@ Pending Review.
 </div>
 </li>
 <li>
-<p>An OpenStack Operator has the member role in a project and found the team of developers working on that project is very knowleadgeable about OpenStack and wishes to allow the team more authonomy managing API resources for their application. Can that operator grant those developers permission to manage API resources on their project?</p>
+<p>An OpenStack Operator has the member role in a project and found that the team of developers working on that project is very knowleadgeable about OpenStack and wishes to allow the team more authonomy managing API resources for their application. Can that operator grant those developers permission to manage API resources on their project?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
