deploy: 0af267f7c91a8b7c51c967d21b548ba90747c00a

--- a/rhoso-intro/1/ch3-multitenancy/s5-cluster-demo.html
+++ b/rhoso-intro/1/ch3-multitenancy/s5-cluster-demo.html
@@ -274,7 +274,7 @@ Work In Progress
 <h2 id="_recording"><a class="anchor" href="#_recording"></a>Recording</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This demonstration will be recorded and the video linked from here, so learners can watch the video and optionally try to replicate it by themselves.</p>
+<p>This demonstration will be recorded and the video will be linked here, so learners can watch the video and optionally try to replicate it by themselves.</p>
 </div>
 </div>
 </div>
@@ -298,10 +298,10 @@ Work In Progress
 <p>Using the OpenStack client, as an administrator, list the regions, azs, and host aggregates of the cluster.</p>
 </li>
 <li>
-<p>Using Horizon, as an administrator, list the regions, azs, and host aggregates of the cluster. Also show API endpoints from Keysone and highlight each endpoint belongs to region.</p>
+<p>Using Horizon, as an administrator, list the regions, azs, and host aggregates of the cluster. Also show API endpoints from Keysone and highlight each endpoint that belongs to the region.</p>
 </li>
 <li>
-<p>Still in Horizon, enter a domain/project and show a workload. Select its server instances and show that those instances refer to AZ and region. Ideally, have a workload with multiple servers behind a load balancer, and those servers are on different AZs.</p>
+<p>Still in Horizon, enter a domain/project and show a workload. Select its server instances and show that those instances refer to AZ and a region. Ideally, have a workload with multiple servers behind a load balancer, and those servers are on different AZs.</p>
 </li>
 <li>
 <p>Show the attributes of a couple host aggregates and of a couple server flavors, and show the attributes which match each other.</p>
@@ -313,7 +313,7 @@ Work In Progress
 <p>Switch to an operator user (member) and show it cannot list host aggregates and compute nodes but can list regions and azs.</p>
 </li>
 <li>
-<p>Show the operator can see attributes of server instances which refer to regions, and azs. Show also the operator can see attributes of server flavors.</p>
+<p>Show the operator can see attributes of server instances which refer to regions, and azs. Show that the operator can also see attributes of server flavors.</p>
 </li>
 <li>
 <p>Switch back to an administrator and show the special domain and projects for cluster-wide shared API resources.</p>
