deploy: 1ef7b3cf823eb4f5e8ac6977c2c52ba7b6918a40

--- a/rhoso-intro/1/ch2-services/s9-summary.html
+++ b/rhoso-intro/1/ch2-services/s9-summary.html
@@ -258,7 +258,7 @@
 <p>All interactions with an OpenStack cluster start with Keystone, which provides authentication and service discovery for all other services. Keystone also organizes API resources in domains and projects for separation of concerns.</p>
 </li>
 <li>
-<p>Almost all applications require the fundamental services: Nova (Compute), Cinder (Block Storage), Glance (Images), and Newtron (Networking).</p>
+<p>Almost all applications require the fundamental services: Nova (Compute), Cinder (Block Storage), Glance (Images), and Neutron (Networking).</p>
 </li>
 <li>
 <p>Applications usually require one of more of the additional services, especially as development teams adopt cloud-native architectures or address non-functional requirements of performance and reliability: Swift (Object Storage), Manila (Shared Filesystems), Octavia (Load Balancer), Designate (Dynamic DNS), Heat (Orchestration), Placement, and Barbican (Key Management).</p>
