deploy: 2cbe207f1334eb2aa1ea585068feafbc70492c07

--- a/rhoso-intro/1/ch2-services/s6-administration-quiz-answers.html
+++ b/rhoso-intro/1/ch2-services/s6-administration-quiz-answers.html
@@ -249,6 +249,9 @@
 <h1 class="page">Answers to the Quiz</h1>
 <div id="preamble">
 <div class="sectionbody">
+<div class="paragraph">
+<p><em>Estimated reading time: <strong>2 minutes</strong>.</em></p>
+</div>
 <div class="admonitionblock warning">
 <table>
 <tr>
