--- a/rhoso-intro/1/ch1-intro/s5-ui-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s5-ui-lecture.html
@@ -248,6 +248,9 @@
 <h1 class="page">OpenStack User Interfaces</h1>
 <div id="preamble">
 <div class="sectionbody">
+<div class="paragraph">
+<p><em>Estimated reading time: <strong>13 minutes</strong>.</em></p>
+</div>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">Objective</dt>
