--- a/rhoso-intro/1/ch2-services/s1-fundamental-lecture.html
+++ b/rhoso-intro/1/ch2-services/s1-fundamental-lecture.html
@@ -248,6 +248,9 @@
 <h1 class="page">Fundamental Services of Red Hat OpenStack</h1>
 <div id="preamble">
 <div class="sectionbody">
+<div class="paragraph">
+<p><em>Estimated reading time: <strong>9 minutes</strong>.</em></p>
+</div>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">Objective</dt>
