--- a/rhoso-intro/1/ch2-services/s4-additional-quiz.html
+++ b/rhoso-intro/1/ch2-services/s4-additional-quiz.html
@@ -248,6 +248,9 @@
 <h1 class="page">Quiz: OpenStack Services and Cloud-Native Applications</h1>
 <div id="preamble">
 <div class="sectionbody">
+<div class="paragraph">
+<p><em>Estimated reading time: <strong>2 minutes</strong>.</em></p>
+</div>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">Objective</dt>
