--- a/rhoso-intro/1/ch2-services/s8-review-quiz.html
+++ b/rhoso-intro/1/ch2-services/s8-review-quiz.html
@@ -248,6 +248,9 @@
 <h1 class="page">Review Quiz: Red Hat OpenStack Services</h1>
 <div id="preamble">
 <div class="sectionbody">
+<div class="paragraph">
+<p><em>Estimated reading time: <strong>3 minutes</strong>.</em></p>
+</div>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">Objective</dt>
