--- a/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
+++ b/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
@@ -248,6 +248,9 @@
 <h1 class="page">Resources, Projects, and Domains</h1>
 <div id="preamble">
 <div class="sectionbody">
+<div class="paragraph">
+<p><em>Estimated reading time: <strong>11 minutes</strong>.</em></p>
+</div>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">Objective</dt>
