--- a/rhoso-intro/1/ch3-multitenancy/s2-multitenancy-quiz.html
+++ b/rhoso-intro/1/ch3-multitenancy/s2-multitenancy-quiz.html
@@ -248,6 +248,9 @@
 <h1 class="page">Quiz: Red Hat OpenStack Multi-Tenancy</h1>
 <div id="preamble">
 <div class="sectionbody">
+<div class="paragraph">
+<p><em>Estimated reading time: <strong>3 minutes</strong>.</em></p>
+</div>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">Objective</dt>
