--- a/rhoso-intro/1/ch1-intro/s4-tasks-quiz-answers.html
+++ b/rhoso-intro/1/ch1-intro/s4-tasks-quiz-answers.html
@@ -280,7 +280,7 @@ Pending review.
 <em>Incorrect: Linux System Administrators are more likely to perform tasks inside a VM</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> Attaching a VM to a different virtual network.<br>
+<p><i class="fa fa-check-square-o"></i> <strong>Attaching a VM to a different virtual network.</strong><br>
 <em>Correct: Server instances (VMs) and virtual networks are OpenStack API resources.</em></p>
 </li>
 <li>
@@ -288,7 +288,7 @@ Pending review.
 <em>Incorrect: Linux System Administrators are more likely to perform tasks inside a VM</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> Configuring IP routing rules for a virtual networks.<br>
+<p><i class="fa fa-check-square-o"></i> <strong>Configuring IP routing rules for a virtual networks.</strong><br>
 <em>Correct: Virtual networks and everything related to them are OpenStack API resources.</em></p>
 </li>
 <li>
@@ -303,11 +303,11 @@ Pending review.
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
-<p><i class="fa fa-check-square-o"></i> Creating new server instances (VMs).<br>
+<p><i class="fa fa-check-square-o"></i> <strong>Creating new server instances (VMs).</strong><br>
 <em>Correct: OpenStack Operators manage OpenStack resources which affect individual application workloads.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> Creating new virtual networks.<br>
+<p><i class="fa fa-check-square-o"></i> <strong>Creating new virtual networks.</strong><br>
 <em>Correct: OpenStack Operators manage OpenStack resources which affect individual application workloads.</em></p>
 </li>
 <li>
@@ -330,7 +330,7 @@ Pending review.
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
-<p><i class="fa fa-check-square-o"></i> Adding new physical RHEL servers as compute nodes to an OpenStack cluster.<br>
+<p><i class="fa fa-check-square-o"></i> <strong>Adding new physical RHEL servers as compute nodes to an OpenStack cluster.</strong><br>
 <em>Correct: The OpenStack Administrator manages the cluster, including its compute nodes.</em></p>
 </li>
 <li>
@@ -342,11 +342,11 @@ Pending review.
 <em>Incorrect: This task usually belongs to Storage Administrators.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> Installing RPM packages and configure physical RHEL servers to be managed by OpenStack control planes.<br>
+<p><i class="fa fa-check-square-o"></i> <strong>Installing RPM packages and configure physical RHEL servers to be managed by OpenStack control planes.</strong><br>
 <em>Correct: OpenStack Administrators could delegate this task to the Server Administration team, but they should be able to perform themselves, and will frequently demand to.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> Installing OpenStack services on OpenShift clusters.<br>
+<p><i class="fa fa-check-square-o"></i> <strong>Installing OpenStack services on OpenShift clusters.</strong><br>
 <em>Correct: OpenStack Administrators could delegate this task to the OpenShift Administration team, but they should be able to perform themselves, and will frequently demand to.</em></p>
 </li>
 </ul>
@@ -361,7 +361,7 @@ Pending review.
 <em>Incorrect: typical tasks related to managing application workloads belong to OpenStack Operators, no matter they use the Red Hat product or not.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> Configuring multiple instances of OpenStack services, one active and another passive, using pacemaker or another clustering middleware.<br>
+<p><i class="fa fa-check-square-o"></i> <strong>Configuring multiple instances of OpenStack services, one active and another passive, using pacemaker or another clustering middleware.</strong><br>
 <em>Correct: Red Hat OpenStack users rely on the high-availability (HA) configurations embedded the product, in the case of Red Hat OpenStack Services on OpenShift, leveraging HA features from Kubernetes.</em></p>
 </li>
 <li>
@@ -369,7 +369,7 @@ Pending review.
 <em>Incorrect: Red Hat OpenStack users are still required to provision and configure their compute nodes, but they are required to use RHEL and cannot use any other Linux distribution.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> Selecting an installation method for OpenStack services on control plane servers, such as from precompiled binaries, operating system packages, or container images.<br>
+<p><i class="fa fa-check-square-o"></i> <strong>Selecting an installation method for OpenStack services on control plane servers, such as from precompiled binaries, operating system packages, or container images.</strong><br>
 <em>Correct: Red Hat OpenStack users rely on the installation methods embedded the product, in the case of Red Hat OpenStack Services on OpenShift, as add-on operators for OpenShift.</em></p>
 </li>
 </ul>
