--- a/rhoso-intro/1/ch1-intro/s7-review-quiz-answers.html
+++ b/rhoso-intro/1/ch1-intro/s7-review-quiz-answers.html
@@ -280,7 +280,7 @@ Pending review.
 <em>Incorrect: Red Hat OpenStack Services on OpenShift does not need nor integrates with OpenShift Virtualization.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> False<br>
+<p><i class="fa fa-check-square-o"></i> <strong>False</strong><br>
 <em>Correct: Red Hat OpenStack Services on OpenShift manages application VMs directly, without using OpenShift Virtualization. It uses the VM manager included with RHEL (libvirt).</em></p>
 </li>
 </ul>
@@ -295,7 +295,7 @@ Pending review.
 <em>Incorrect: OpenStack Operators do not require access to any OpenShift tool to perform their daily work.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> False<br>
+<p><i class="fa fa-check-square-o"></i> <strong>False</strong><br>
 <em>Correct: OpenStack Operators only need access to OpenStack APIs, which they get from the OpenStack client and the OpenStack Horizon dashboard.</em></p>
 </li>
 </ul>
@@ -310,7 +310,7 @@ Pending review.
 <em>Incorrect: OpenStack Operators should not perform any tasks directly on compute nodes.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> False<br>
+<p><i class="fa fa-check-square-o"></i> <strong>False</strong><br>
 <em>Correct: OpenStack Operators manage application VMs using OpenStack APIs.</em></p>
 </li>
 </ul>
@@ -321,7 +321,7 @@ Pending review.
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
-<p><i class="fa fa-check-square-o"></i> True<br>
+<p><i class="fa fa-check-square-o"></i> <strong>True</strong><br>
 <em>Correct: OpenStack Administrators are required to manage OpenStack services using Kubernetes APIs and custom resources, and that requires access to OpenShift clusters.</em></p>
 </li>
 <li>
@@ -340,7 +340,7 @@ Pending review.
 <em>Incorrect: OpenStack Operators can perform most, but not all, of their tasks using the Horizon web UI.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> False<br>
+<p><i class="fa fa-check-square-o"></i> <strong>False</strong><br>
 <em>Correct: Sometimes an OpenStack operator needs to use the OpenStack client or some other tool which provides access to OpenStack APIs not availabe through Horizon.</em></p>
 </li>
 </ul>
@@ -351,7 +351,7 @@ Pending review.
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
-<p><i class="fa fa-check-square-o"></i> True<br>
+<p><i class="fa fa-check-square-o"></i> <strong>True</strong><br>
 <em>Correct: OpenStack Operators role focus on applications and their associated VMs, virtual networks, and virtual storage.</em></p>
 </li>
 <li>
