Deploy preview for PR 30 🛫

--- a/pr-preview/pr-30/rhoso-intro/1/ch1-intro/s5-ui-lecture.html
+++ b/pr-preview/pr-30/rhoso-intro/1/ch1-intro/s5-ui-lecture.html
@@ -333,10 +333,10 @@ In this learning journey, we prefer the term "resource" over "object" to avoid c
 <p><code>availability zone</code></p>
 </li>
 <li>
-<p><code>console URL</code></p>
+<p><code>console url</code></p>
 </li>
 <li>
-<p><code>floating IP</code></p>
+<p><code>floating ip</code></p>
 </li>
 <li>
 <p><code>network</code></p>
@@ -392,7 +392,7 @@ In this learning journey, we prefer the term "resource" over "object" to avoid c
 <p><code>add volume</code></p>
 </li>
 <li>
-<p><code>remove floating IP</code></p>
+<p><code>remove floating ip</code></p>
 </li>
 </ul>
 </div>
